[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
hyper = "0.14.20"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
